Adding create, read, update and delete views Adding a new service factory for posts Restructring admin views for clarity
# Please enter the commit message for your changes. Lines starting
# with '#' will be ignored, and an empty message aborts the commit.
# On branch master
# Changes to be committed:
#	modified:   bower.json
#	modified:   client/app/app.css
#	modified:   client/app/app.js
#	modified:   client/app/main/main.js
#	modified:   client/app/post/post.controller.js
#	modified:   client/app/post/post.js
#	new file:   client/app/post/views/admin/create.html
#	new file:   client/app/post/views/admin/edit.html
#	new file:   client/app/post/views/admin/list.html
#	modified:   client/app/postService/postService.service.js
#	modified:   client/components/navbar/navbar.controller.js
#	modified:   client/components/navbar/navbar.html
#	modified:   client/index.html
#	modified:   package.json
#	modified:   server/config/seed.js
#
# Changes not staged for commit:
#	deleted:    client/app/post/views/edit.html
#	deleted:    client/app/post/views/list.html
#

--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,7 @@
       <script src="bower_components/summernote/dist/summernote.js"></script>
       <script src="bower_components/angular-summernote/dist/angular-summernote.min.js"></script>
       <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+      <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
       <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
