--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,8 @@
       <script src="bower_components/angular-summernote/dist/angular-summernote.min.js"></script>
       <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
       <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
+      <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
+      <script src="bower_components/ng-file-upload-shim/angular-file-upload-shim.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
       <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
